chore: fix TableOfConverter.java and tests